--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-redux": "^7.1.20",
     "@types/styled-components": "^5.1.18",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "styled-components": "^5.3.3"
   },
