--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react-redux": "^7.1.20",
     "@types/react-slick": "^0.23.7",
